兼容 Java 8 生成校验测试